Fixes for Pulsar